# psw

./: .gitignore  Cargo.toml
migrations/: 20250408172120_intial.sql
src/: arguments.rs  database.rs  dbus.rs  hyprpaper.rs  main.rs  wallpaper.rs
src/commands/: add.rs  daemon.rs  del.rs  list.rs  mod.rs  set.rs
src/database/: mod.rs  wallpaper.rs
