[package]
name = "psw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
dirs = "6.0.0"
reqwest = "0.12.15"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "fs"] }
zbus = { version = "5.5.0", features = ["tokio"] }
